--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    minSdkVersion = 15
+    compileSdkVersion = 23
+    targetSdkVersion = 22
+    buildToolsVersion = "23.0.2"
+    versionCode = 1
+    versionName = "1.0.0"
+}
 
 buildscript {
     repositories {
