--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.thejunkjon.utilities.app" >
+    package="com.github.thejunkjon.utilities.app">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.github.thejunkjon.utilities.app.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,15 +19,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.github.thejunkjon.utilities.app.UtilitiesSelectionActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_utilities_selection"
-            android:theme="@style/FullscreenTheme" >
-        </activity>
-        <activity
             android:name=".filebrowser.FileBrowserActivity"
-            android:label="@string/title_activity_file_browser" >
-        </activity>
+            android:label="@string/title_activity_file_browser" />
     </application>
 
 </manifest>
